# temp-repo

./: .gitignore  CMakeLists.txt  Makefile  README.txt  VimCommand.txt  fact.c  file.c  gitfile.txt  githelp.txt  githelp1.txt  practice.env  rough.txt
Books/C++_C/Rough/Automation testing resumes/Automation testing resumes/: automation-testing-2-plus-years-exp-2.doc  automation-testing-2-years-exp-1.doc  automation-testing-2-years-exp-3.doc  automation-testing-3-years-exp.doc  automation-testing-4-plus-years-exp.doc  automation-testing-4-years-exp-5.doc  automation-testing-4-years-exp.doc  automation-testing-5-plus-years-exp.doc  automation-testing-5-years-exp-1.doc  automation-testing-5-years-exp.doc
Books/C++_C/work/: test.cpp
C/: Hello.c  malloc.c
C/DataStructure/: CMakeLists.txt  fibonacci01.c
C/DataStructure/dir01/: CMakeLists.txt  fibonacci01.c  runCMake.sh
C/DataStructure/dir02/: CMakeLists.txt  prime.c  runCMake.sh
C/file/: file01.c
C/rough/: asm.c  bool.c
C/socket/: a.out  socket01.c
C/string/: Makefile1  runstrcat.sh  strcat.c
C/struct/: Makefile  run.sh  struct01.c
C/thread/dir01/: CMakeLists.txt  thread01.c
C/thread/dir02/: CMakeLists.txt  thread02.c
C/thread/dir03/: CMakeLists.txt  runCMake.sh
C/thread/dir04/: CMakeLists.txt  runCMake.sh
C/thread/dir05/: CMakeLists.txt  runCMake.sh
C/thread/dir06/: CMakeLists.txt
CMake/: CMakeCommandList.txt  CMakeLists.txt  configurefile.hh.in
CMake/C++/class/dir01/: CMakeLists.txt  class01.cpp
CMake/C++/dir01/: CMakeLists.txt  main.cpp  main.hh.in
CMake/C++/dir02/: CMakeLists.txt  reference01.cpp
CMake/C++/dir03/: CMakeLists.txt  template01.cpp
CMake/dir01/: CMakeLists.txt  README.txt
CMake/dir02/: CMakeLists.txt
CMake/dir03/: gtest.txt
Cpp/: Hello.cpp
Cpp/ravi/: demo.cpp
HTML/: hello.html  test.html
Java/: Hello.java  Hello1.java
Make/: Makefile1
cpp/: cpp_keyword.cpp
cpp/OperatorOverLoading/: CMakeLists.txt  Incrementoperator.cpp  Makefile  parenthesis.cpp  plusoperator.cpp
cpp/friend/: CMakeLists.txt  Makefile1  Makefile2  Makefile3  Makefile4  friend01.cpp  friend02.cpp  friend03.cpp  friend04.cpp  friendfun.cpp
cpp/lambda/: Makefile1  Makefile2  Makefile3  Makefile4  Makefile5  Makefile6  lambda01.cpp  lambda02.cpp  lambda03.cpp  lambda04.cpp  lambda05.cpp  lambda06.cpp  readMakefile.txt
cpp/rough/dir01/: CMakeLists.txt  rough01.cpp  runCMake.sh
cpp/rough/dir02/: CMakeLists.txt  rough02.cpp
cpp/smartptr/: Makefile  self.cpp  unique_ptr.cpp
cpp/template/: Makefile  fun01.cpp  fun02.cpp
cpp/typecast/: CMakeLists.txt  Makefile1  Makefile2  const_cast.cpp  dynamic_cast.cpp  reinterpret_cast.cpp  static_cast.cpp  typecast.txt
gtest/: GTest_Control_Thr_CMDLineArgs.txt
local/: mainArgs.c
python/: comment.py  mathcalc.py  print_hello.py  while01.py  while02.py  while03.py  while04.py
python/class/: class01.py  class02.py
python/function/: fun01.py  fun02.py  fun03.py
python/rough/: 01.py  02.py  03.py  backslash.py  globalvar.py  test.py
python/rough/call/: test.py
python/rough/call/dir/: fun.py
