cmake_minimum_required(VERSION 3.12)
project(fibonacci LANGUAGES "C")
set(SOURCE_FILE fibonacci01.c)
message(STATUS "binary directory is ${CMAKE_BINARY_DIR}")
message(STATUS "current source directory is ${CMAKE_CURRENT_SOURCE_DIR}")
message(STATUS "this is source ${CMAKE_SOURCE_DIR}")
message(STATUS "")
set(CFLAG "-std=c11 -Wall -Werror")
add_executable(${PROJECT_NAME} ${SOURCE_FILE})
target_link_libraries(${PROJECT_NAME} ${CFLAG})
