cmake_minimum_required(VERSION 3.12)
project(rough LANGUAGES "CXX")
set(CMAKE_CXX_COMPILER "g++")
set(CXX_FLAGS "-std=c++11 -Wall -Werror")
set(CMAKE_CXX_STANDARD ON)
message(STATUS "this is ${CMAKE_SOURCE_DIR}")
message(STATUS "this is ${CMAKE_BINARY_DIR}")
message(STATUS "this is ${CMAKE_CURRENT_SOURCE_DIR}")
add_executable(${PROJECT_NAME} rough01.cpp)
#target_link_libraries()
